--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,3 @@
-body {
-  padding-right: 2%;
-  padding-left: 1%;
-} 
-
- /* .li {
-padding-bottom: 1%;
-padding-bottom: 1%;
-} */
-
-
 #card{
   content: center;
 }
@@ -16,10 +5,6 @@ padding-bottom: 1%;
 #form-control {
   padding: 5%;
 }
-
-/* .navbar-brand{
-  padding: 5%;
-} */
 
 footer {
   background: #FF01F6;
@@ -35,7 +20,6 @@ footer {
 .fa {
   padding: 20px;
   font-size: 30px;
-  /* width: 55px; */
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
@@ -87,6 +71,12 @@ footer {
   align-self: center;
 }
 
+.Content{
+  display: flex;
+  margin: auto;
+  color: #0E79DA;
+  align-content: center;
+}
 
 /* @media all and (min-width: 992px) {
 .navbar .nav-item .dropdown-menu{ display: none; }
