--- a/src/index.css
+++ b/src/index.css
@@ -97,9 +97,8 @@ footer {
 #formButton{
   width: 100%;
 }
-/* @media all and (min-width: 992px) {
-.navbar .nav-item .dropdown-menu{ display: none; }
-.navbar .nav-item:hover .nav-link{ color: #fff;  }
-.navbar .nav-item:hover .dropdown-menu{ display: block; }
-.navbar .nav-item .dropdown-menu{ margin-top:0; }
-}	 */
+
+#carouselExampleIndicators{
+  width: 300px;
+  height : 300px;
+}
