--- a/src/index.css
+++ b/src/index.css
@@ -106,3 +106,24 @@ footer {
   width: 300px;
   height : 300px;
 }
+
+
+#terminalContainer, #terminal {
+  background-color: black;
+  border: 0ch;
+  color: aqua;
+  /* width: 100%;
+  height: 100%; 
+  position: absolute;  */
+  top: 0; 
+  left: 0;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: aqua;
+  opacity: 1; /* Firefox */
+}
+
+#terminalLog{
+  
+}
